feat: 实现水瓶倒水动画、快递袋匹配及游戏关卡逻辑
refactor: 优化瓶子预制体结构，增加水柱和光源节点

fix: 修正瓶子镜像和回正动画的逻辑问题

style: 调整UI文本显示和粒子特效效果

docs: 更新配置文件和关卡数据文档

test: 添加新脚本的单元测试用例

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 /local
 /temp
 /build
+/extensions
 /.creator
 /.qoder
+/.trae
 
 # 不要忽略 settings 目录下的 builder.json（如果你有自定义构建配置）
 # 但其他 settings 文件通常是本地生成的
